--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>To Do App</title>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="./style.css" />
 		<script src="./script.js"></script>
 	</head>
 	<body>
-		<div class="background-image">
-      <img src="./images/bg-desktop-dark.jpg";
-    </div>
+		<div class="container">
+			<div class="background-image">
+				<img src="./images/bg-desktop-dark.jpg" />
+			</div>
+
+			<div class="header">
+				<div class="title">TODO</div>
+				<div class="theme"><img src="images/icon-sun.svg" /></div>
+			</div>
+		</div>
 	</body>
 </html>
