--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 				<div class="title">TODO</div>
 				<div class="theme"><img src="images/icon-sun.svg" /></div>
 			</div>
+
+			<div class="new-todo">
+				<div class="check">
+					<div class="check-mark">
+
+					</div>
+				</div>
+				<div class="new-todo-input">
+					<form>
+						<input type="text" placeholder="Create a new todo..." />
+					</form>
+				</div>
+			</div>
+
 		</div>
 	</body>
 </html>
