--- a/index.html
+++ b/index.html
@@ -27,17 +27,54 @@
 
 			<div class="new-todo">
 				<div class="check">
-					<div class="check-mark">
-
-					</div>
+					<div class="check-mark"></div>
 				</div>
 				<div class="new-todo-input">
 					<form onSubmit="addItem(event)">
-						<input id="todo-input" type="text" placeholder="Create a new todo..." />
+						<input
+							id="todo-input"
+							type="text"
+							placeholder="Create a new todo..."
+						/>
 					</form>
 				</div>
 			</div>
 
+			<div class="todo-items-wrapper">
+				<div class="todo-items">
+					<div class="todo-item">
+						<div class="check">
+							<div class="check-mark">
+								<img src="./images/icon-check.svg" />
+							</div>
+						</div>
+						<div class="todo-text">
+							Cut the lawn
+						</div>
+					</div>
+					<div class="todo-item">
+						<div class="check">
+							<div class="check-mark">
+								<img src="./images/icon-check.svg" />
+							</div>
+						</div>
+						<div class="todo-text">
+							Cut the lawn
+						</div>
+					</div>
+					<div class="todo-item">
+						<div class="check">
+							<div class="check-mark">
+								<img src="./images/icon-check.svg" />
+							</div>
+						</div>
+						<div class="todo-text">
+							Cut the lawn
+						</div>
+					</div>
+				</div>
+				<div class="todo-items-info"></div>
+			</div>
 		</div>
 	</body>
 </html>
