mobile view added for statuses

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="mobile-statuses">
+				<span class="active">All</span>
+				<span>Active</span>
+				<span>Completed</span>
+			</div>
 		</div>
 	</body>
 </html>
