--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<div class="todo-items-wrapper">
 				<div class="todo-items">
-					<div class="todo-item">
+					<!-- <div class="todo-item">
 						<div class="check">
 							<div class="check-mark">
 								<img src="./images/icon-check.svg" />
@@ -69,7 +69,7 @@
 							</div>
 						</div>
 						<div class="todo-text">Cut the lawn</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="todo-items-info">
 					<div class="items-left">5 items left</div>
